# NNPID

./: .coverage  .cursorrules  .gitignore  .iris_camera_human.wbproj  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODE_REVIEW_FIXES_APPLIED.md  CODE_REVIEW_REPORT.md  CODE_STYLE.md  CONTRIBUTING.md  INSTALL_WEBOTS.md  LICENSE  MUJOCO_LOG.TXT  Makefile  PROJECT_STATUS.md  QUICKSTART_WEBOTS.md  README.md  README_TRAINED_MODEL.md  SITL_MuJoCo_Documentation (1).md  SITL_MuJoCo_Documentation.md  WEBOTS_CONTROLLERS_SETUP.md  WEBOTS_QUICKSTART.md  context1.md  context2.md  iris_camera_human.wbt  main.py  pyproject.toml  run_sitl.sh  run_webots.sh  setup_controllers.sh  setup_webots_env.sh  test_model.py  train_full.py  webots_capture.py  webots_human_tracker.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: default.yaml  perturbations.yaml  px4_sitl.yaml  simulation.yaml  training.yaml  training_config.yaml  yaw_tracking.yaml  yaw_tracking_mega.yaml
controllers/ardupilot_vehicle_controller/: ardupilot_vehicle_controller.py  webots_vehicle.py
docs/: CODE_REVIEW.md  DEPLOYMENT_WEBOTS.md  GETTING_STARTED.md  MEGA_TRAINING.md  QUICKSTART_HUMAN_TRACKING.md  QUICKSTART_WEBOTS.md  SITL_INTEGRATION.md  TRAINED_MODEL_USAGE.md  TRAINING.md  WEBOTS_CONTROLLERS_SETUP.md  WEBOTS_HUMAN_TRACKING.md  WEBOTS_QUICKSTART.md
docs/issues/: 001-yaw-sign-inversion.md  002-motor-mixing-stability.md  003-hover-pid-instability.md  004-config-parameter-mismatch.md  005-webots-sitl-protocol-mismatch.md  README.md
docs/tickets/: 001-reward-system-upgrade.md
examples/: use_trained_model.py
models/: quadrotor_generic.xml  quadrotor_x500.xml
notebooks/: 01_getting_started.ipynb
runs/analysis_20260126_142910/analytics/: training_analytics.jsonl
runs/analysis_20260126_142910/eval_logs/: evaluations.npz
runs/analysis_20260126_143741/analytics/: training_analytics.jsonl
runs/analysis_20260126_143741/eval_logs/: evaluations.npz
runs/analysis_20260126_144202/analytics/: training_analytics.jsonl
runs/analysis_20260126_144202/eval_logs/: evaluations.npz
runs/analysis_20260126_145426/analytics/: training_analytics.jsonl
runs/analysis_20260126_145426/eval_logs/: evaluations.npz
runs/analysis_20260126_150455/: vec_normalize.pkl
runs/analysis_20260126_150455/analytics/: final_summary.json  training_analytics.jsonl
runs/analysis_20260126_150455/eval_logs/: evaluations.npz
runs/analysis_20260202_222604/analytics/: training_analytics.jsonl
runs/analysis_20260202_222835/: vec_normalize.pkl
runs/analysis_20260202_222835/analytics/: final_summary.json  training_analytics.jsonl
runs/analysis_20260202_222835/eval_logs/: evaluations.npz
runs/analysis_20260203_002222/: vec_normalize.pkl
runs/analysis_20260203_002222/analytics/: final_summary.json  training_analytics.jsonl
runs/analysis_20260203_002222/eval_logs/: evaluations.npz
runs/deadzone_model/: config.yaml
runs/deadzone_model/eval_logs/: evaluations.npz
runs/deadzone_model_1m/: config.yaml
runs/deadzone_model_1m/eval_logs/: evaluations.npz
runs/py311_model/: config.yaml
runs/yaw_tracking_20260123_231608/: config.yaml
runs/yaw_tracking_20260123_232829/: config.yaml
runs/yaw_tracking_20260123_233233/: config.yaml
runs/yaw_tracking_20260126_011040/: config.yaml
runs/yaw_tracking_20260126_012437/: config.yaml
runs/yaw_tracking_20260126_022150/: config.yaml
runs/yaw_tracking_20260130_001407/: config.yaml
scripts/: ardupilot_full.py  ardupilot_mujoco.py  ardupilot_mujoco_final.py  dashboard.py  debug_json.py  demo_perturbation_viz.py  evaluate.py  evaluate_yaw_tracker.py  hil_server.py  model_inspector.py  monitor_training.py  mujoco_sitl_takeoff.py  mujoco_sitl_viz.py  render_flight_video.py  run_ardupilot_sim.py  run_mega_viz.py  run_model_mujoco.py  run_px4_mujoco.py  run_sitl_sim.py  run_sitl_test.sh  run_sitl_tests.sh  run_yaw_tracker_sitl.py  sitl_scenarios.py  test_arm.py  test_json.py  test_prearm.py  test_sitl.py  test_stabilizer_random.py  train.py  train_controller.py  train_setpoint.py  train_with_analysis.py  train_yaw_tracker.py  true_sitl.py  view_trained_model.py  visualize.py  visualize_model.py  visualize_mujoco.py
scripts/shell/: README.md  run_sitl.sh  setup_controllers.sh  setup_webots_env.sh
src/: __init__.py  config.py
src/communication/: __init__.py  lockstep.py  mavlink_bridge.py  messages.py
src/controllers/: __init__.py  base_controller.py  hover_stabilizer.py  nn_controller.py  offboard_controller.py  position_controller.py  sitl_controller.py  yaw_rate_controller.py
src/core/: __init__.py  motor_mixer.py  mujoco_sim.py  quadrotor.py  sensors.py
src/deployment/: __init__.py  mavlink_client.py  model_export.py  model_loading.py  trained_yaw_tracker.py  yaw_tracker_sitl.py
src/environment/: simple_drone_sim.py
src/environments/: __init__.py  base_drone_env.py  hover_env.py  setpoint_base_env.py  setpoint_env.py  sitl_env.py  target_patterns.py  trajectory_env.py  utils.py  waypoint_env.py  yaw_tracking_env.py
src/models/: __init__.py  gru_networks.py  replay_buffer.py
src/perturbations/: __init__.py  aerodynamics.py  base.py  delays.py  external_forces.py  physics.py  sensor_noise.py  visualization.py  wind.py
src/training/: reward_shaper.py  rsac_trainer.py
src/utils/: __init__.py  coordinate_transforms.py  domain_randomization.py  logger.py  rotations.py  safety.py  trajectory.py  trajectory_generator.py  transforms.py
src/visualization/: __init__.py  dashboard.py  mujoco_overlay.py  nn_visualizer.py  scene_objects.py  telemetry_hud.py  viewer.py
src/webots/: README.md  __init__.py  webots_capture.py  webots_human_tracker.py
tests/: __init__.py  mock_sitl.py  test_config_consistency.py  test_environments.py  test_hover_stabilizer.py  test_model_loading.py  test_mujoco_sim.py  test_perturbations.py  test_sitl_integration.py  test_trained_yaw_tracker.py  test_transforms.py
web/: app.py
web/templates/: base.html  dashboard.html  demo.html  index.html  training.html
(+13 files in other folders)
