[project]
name = "nnpid"
version = "0.1.0"
description = "Neural Network PID replacement for drone target tracking using RSAC"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NNPID Team"}
]
keywords = ["drone", "pid", "neural-network", "reinforcement-learning", "rsac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core ML
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    
    # Visualization & Config
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "tensorboard>=2.13.0",
    
    # Web Dashboard
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.2",
    "pandas>=2.0.0",
    
    # Deployment
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]

[project.optional-dependencies]
# Optional: Perlin noise for trajectory generation
noise = ["noise>=1.2.2"]
# Optional: Real drone communication
drone = ["pymavlink>=2.4.40"]
# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
# All optional dependencies
all = ["nnpid[noise,drone,dev]"]

[project.scripts]
nnpid = "nnpid.main:main"
nnpid-train = "nnpid.scripts.train:main"
nnpid-dashboard = "nnpid.scripts.dashboard:main"

[project.urls]
Homepage = "https://github.com/nnpid/nnpid"
Documentation = "https://github.com/nnpid/nnpid#readme"
Repository = "https://github.com/nnpid/nnpid"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.uv.sources]
# Pin torch to CPU version for faster install (override with CUDA if needed)
# torch = { index = "pytorch-cpu" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
