[project]
name = "nnpid"
version = "1.0.0"
description = "Neural Network PID Controller - MuJoCo drone simulation with ArduPilot SITL integration for RL training"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NNPID Team"}
]
keywords = [
    "drone",
    "quadrotor", 
    "simulation",
    "mujoco",
    "ardupilot",
    "sitl",
    "reinforcement-learning",
    "gymnasium",
    "neural-network",
    "control",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Games/Entertainment :: Simulation",
]

[project.urls]
Homepage = "https://github.com/brainnotincluded/NNPID"
Documentation = "https://github.com/brainnotincluded/NNPID#readme"
Repository = "https://github.com/brainnotincluded/NNPID.git"
Issues = "https://github.com/brainnotincluded/NNPID/issues"

[project.dependencies]
mujoco = ">=3.0"
pymavlink = ">=2.4"
gymnasium = ">=0.29"
numpy = ">=1.24"
scipy = ">=1.10"
pyyaml = ">=6.0"
stable-baselines3 = ">=2.0"
tensorboard = ">=2.14"
matplotlib = ">=3.7"
imageio = ">=2.31"
imageio-ffmpeg = ">=0.4"
torch = ">=2.0"
rich = ">=13.0"
opencv-python = ">=4.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "models/",
    "config/",
    "scripts/",
    "tests/",
    "docs/",
]

# =============================================================================
# Code Quality Tools
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | runs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (needed for sys.path modification)
    "B008",   # function calls in defaults
    "N803",   # argument name should be lowercase (R for rotation matrix is conventional)
    "N806",   # variable name should be lowercase (R for rotation matrix is conventional)
    "SIM108", # use ternary operator (reduces readability for complex cases)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402", "F401"]  # Scripts modify sys.path and may have conditional imports
"tests/*" = ["F401", "B011", "UP035"]  # Tests may have unused imports, asserts, and legacy typing

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "runs/",
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "sitl: marks tests requiring ArduPilot SITL",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/*/__pycache__/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# =============================================================================
# Security - Bandit
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B311"]  # assert, random

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]
